# Projeto_criptografia

./: README.md  RSA_functions.gp  RSA_functions_modular_exponentiation.gp  encript.c  exp_mod.c  main.c  main_exp_pow.c  pow_mod.c
Cesar/GMP/: CMakeLists.txt  NextPrime.c  decript.c  encript.c  exp_mod.c  gcdext.c  m_bench.cpp  main.c  main_exp_pow.c  main_np.c  mep_bench.cpp  mnp_bench.cpp  my_benchmark  test_gmp.c  teste.c
Cesar/PARI/: RSA_functions.gp  teste.gp
GMP/: main.c  pow_mod.c  test_gmp.c
PARI/: RSA_functions_modular_exponentiation.gp  teste.gp
